--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -203,7 +203,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/1.jpg"
+                        [src]="usuario?.imagenUrl"
                         alt="user"
                         class="img-circle"
                       />
@@ -317,21 +317,21 @@
             data-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
-            ><img
-              src="./assets/images/users/1.jpg"
-              alt="user"
-              class="profile-pic"
+            ><img [src]="usuario?.imagenUrl" alt="user" class="profile-pic"
           /></a>
           <div class="dropdown-menu dropdown-menu-right animated fadeIn fast">
             <ul class="dropdown-user">
               <li>
                 <div class="dw-user-box">
                   <div class="u-img">
-                    <img src="./assets/images/users/1.jpg" alt="user" />
+                    <img [src]="usuario?.imagenUrl" alt="user" />
                   </div>
                   <div class="u-text">
-                    <h4>Steave Jobs</h4>
-                    <p class="text-muted">varun@gmail.com</p>
+                    <h4>{{ usuario?.nombre }}</h4>
+                    <p class="text-muted">
+                      {{ usuario?.email | slice : 0 : 28 }}
+                      {{ usuario!.email.length > 28 ? "..." : "" }}
+                    </p>
                     <a
                       href="pages-profile.html"
                       class="btn btn-rounded btn-danger btn-sm"
@@ -342,7 +342,7 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="ti-user"></i> My Profile</a>
+                <a routerLink="./perfil"><i class="ti-user"></i> My Profile</a>
               </li>
               <li>
                 <a href="#"><i class="ti-wallet"></i> My Balance</a>
@@ -356,7 +356,9 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="fa fa-power-off"></i> Logout</a>
+                <a (click)="logout()" class="cursor-pointer"
+                  ><i class="fa fa-power-off"></i> Logout</a
+                >
               </li>
             </ul>
           </div>
