--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -10,15 +10,17 @@
         <li class="user-profile">
           <a
             class="has-arrow waves-effect waves-dark"
-            href="#"
+            routerLink="./perfil"
             aria-expanded="false"
-            ><img src="./assets/images/users/profile.png" alt="user" /><span
+            ><img [src]="usuario?.imagenUrl" alt="user" /><span
               class="hide-menu"
-              >Steave Jobs
+              >{{ usuario?.nombre | slice : 0 : 18 }}
             </span></a
           >
-          <ul aria-expanded="false" class="collapse">
-            <li><a href="javascript:void()">My Profile </a></li>
+          <ul aria-expanded="true" class="collapse">
+            <li>
+              <a routerLinkActive="active" routerLink="./perfil">My Profile </a>
+            </li>
             <li><a href="javascript:void()">My Balance</a></li>
             <li><a href="javascript:void()">Inbox</a></li>
             <li>
@@ -58,7 +60,11 @@
             <li *ngFor="let subMenuItem of item.submenu">
               <!-- [routerLink]="subMenuItem.url" -->
               <a
-                [routerLink]="subMenuItem.url === '/' ? '/dashboard' : '/dashboard/' + subMenuItem.url"
+                [routerLink]="
+                  subMenuItem.url === '/'
+                    ? '/dashboard'
+                    : '/dashboard/' + subMenuItem.url
+                "
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"
                 >{{ subMenuItem.titulo }}</a
