--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.img-avatar {
+  width: 200px;
+  height: 200px;
+  margin: 20px auto;
+  align-self: center;
+}
