--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,31 @@
   margin: 20px auto;
   align-self: center;
 }
+
+.w-100 {
+  width: 100px !important;
+}
+
+.w-150 {
+  width: 150px !important;
+}
+
+.avatar {
+  border-radius: 100%;
+  border: 1px solid gray;
+  width: 30px;
+}
+
+.oculto {
+  display: none;
+}
+
+.fondo-modal-imagen {
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 100;
+}
