--- a/src/app/pages/mantenimientos/usuarios/usuarios.component.html
+++ b/src/app/pages/mantenimientos/usuarios/usuarios.component.html
@@ -49,6 +49,7 @@
                     [src]="usuario.imagenUrl"
                     alt="Avatar del usuario"
                     class="avatar"
+                    (click)="abrirlModal(usuario)"
                   />
                 </td>
                 <td>{{ usuario.email }}</td>
