--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
               >{{ usuario?.nombre | slice : 0 : 18 }}
             </span></a
           >
-          <ul aria-expanded="true" class="collapse">
+          <ul aria-expanded="false" class="collapse">
             <li>
               <a routerLinkActive="active" routerLink="./perfil">My Profile </a>
             </li>
