--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -73,16 +73,23 @@
         <li class="nav-item hidden-xs-down search-box">
           <a
             class="nav-link hidden-sm-down waves-effect waves-dark"
-            href="javascript:void(0)"
+            (click)="toogleSearch()"
             ><i class="ti-search"></i
           ></a>
-          <form class="app-search">
+          <form
+            class="app-search"
+            [ngClass]="{ buscando: isSearching }"
+            (submit)="buscar(txtTermino.value)"
+          >
             <input
               type="text"
               class="form-control"
-              placeholder="Search & enter"
+              placeholder="Buscar médico, hospital o usuario"
+              #txtTermino
             />
-            <a class="srh-btn"><i class="ti-close"></i></a>
+            <a class="srh-btn" (click)="toogleSearch()"
+              ><i class="ti-close"></i
+            ></a>
           </form>
         </li>
         <!-- ============================================================== -->
