--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,10 @@
   align-self: center;
 }
 
+.w-50 {
+  width: 50px !important;
+}
+
 .w-100 {
   width: 100px !important;
 }
@@ -37,4 +41,8 @@
   top: 0px;
   width: 100%;
   z-index: 100;
+}
+
+.search-box .app-search.buscando {
+  display: block;
 }
